Add Superagent tool execution support

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 # Example environment configuration
 DATABASE_URL=postgresql+asyncpg://postgres:postgres@db:5432/postgres
 SUPERAGENT_URL=http://superagent:8080
+SUPERAGENT_API_KEY_PREFIX=tenant_
 APP_ENV=local
