Add chat to workflow builder

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,6 @@ DATABASE_URL=postgresql+asyncpg://postgres:postgres@db:5432/postgres
 SUPERAGENT_URL=http://superagent:8080
 SUPERAGENT_API_KEY_PREFIX=tenant_
 APP_ENV=local
+OPENAI_API_KEY=
+LLM_PROVIDER=openai
+LLM_MODEL=gpt-3.5-turbo
