Add production config and monitoring

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,7 +1,13 @@
-FROM python:3.11-slim
+# Multi-stage build for gaigentic backend
+FROM python:3.11-slim AS builder
 WORKDIR /app
 COPY requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
+RUN pip install --user --no-cache-dir -r requirements.txt
+
+FROM python:3.11-slim
+WORKDIR /app
+COPY --from=builder /root/.local /root/.local
+ENV PATH=/root/.local/bin:$PATH
 COPY . .
 RUN chmod +x start.sh
 EXPOSE 8001
