--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
   gaigentic-backend:
     build: ./backend
     env_file:
-      - .env
+      - .env.development
     ports:
       - "8001:8001"
     depends_on:
