feat: add multi-LLM support

--- a/.env.development
+++ b/.env.development
@@ -3,6 +3,10 @@ DATABASE_URL=postgresql+asyncpg://postgres:postgres@db:5432/postgres
 SUPERAGENT_URL=http://superagent:8080
 APP_ENV=development
 OPENAI_API_KEY=
+CLAUDE_API_KEY=
+MISTRAL_API_KEY=
+OLLAMA_BASE_URL=http://localhost:11434
+LLM_PROVIDERS_ENABLED=openai
 LLM_PROVIDER=openai
 LLM_MODEL=gpt-3.5-turbo
 JWT_SECRET_KEY=CHANGE_ME
