--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,10 @@ SUPERAGENT_URL=http://superagent:8080
 SUPERAGENT_API_KEY_PREFIX=tenant_
 APP_ENV=local
 OPENAI_API_KEY=
+CLAUDE_API_KEY=
+MISTRAL_API_KEY=
+OLLAMA_BASE_URL=http://localhost:11434
+LLM_PROVIDERS_ENABLED=openai
 LLM_PROVIDER=openai
 LLM_MODEL=gpt-3.5-turbo
 JWT_SECRET_KEY=CHANGE_ME
