--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,9 @@
 version: "3.8"
 services:
   superagent:
-    image: homanp/superagent:latest
+    build:
+      context: ./superagent/libs/superagent
+      dockerfile: Dockerfile
     ports:
       - "8080:8080"
   gaigentic-backend:
