--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,9 @@ version: "3.8"
 services:
   superagent:
     build:
-      context: ./superagent/libs/superagent
+      # Fetch the Superagent service directly from GitHub so users don't need
+      # to clone the repository locally.
+      context: https://github.com/superagent-ai/superagent.git#libs/superagent
       dockerfile: Dockerfile
     ports:
       - "8080:8080"
