--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -10,6 +10,10 @@ RUN pip install --user --no-cache-dir -r requirements.txt
 # ---- Final image ----
 FROM python:3.11-slim
 
+RUN apt-get update && \
+    apt-get install -y netcat && \
+    rm -rf /var/lib/apt/lists/*
+
 WORKDIR /app
 
 # Copy built dependencies
