Ensure superagent database exists

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,6 +45,7 @@ services:
     image: postgres:15
     environment:
       POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: superagent
     volumes:
       - postgres_data:/var/lib/postgresql/data
   redis:
