--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -24,6 +24,7 @@ services:
     image: postgres:15
     environment:
       POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: superagent
     volumes:
       - /data/postgres:/var/lib/postgresql/data
   redis:
