--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,12 +42,18 @@ services:
     depends_on:
       - backend
   db:
-    image: postgres:15
+    build:
+      context: .
+      dockerfile: postgres.Dockerfile
+    container_name: db
     environment:
       POSTGRES_PASSWORD: postgres
       POSTGRES_DB: superagent
+    ports:
+      - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
+
   redis:
     image: redis:7
     volumes:
