--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,6 +1,11 @@
-FROM node:20
+# Build stage
+FROM node:20 AS builder
 WORKDIR /app
-COPY package*.json ./
-RUN npm install
 COPY . .
-CMD ["npm", "run", "dev"]
+RUN npm install && npm run build
+
+# Serve stage
+FROM nginx:alpine
+COPY --from=builder /app/dist /usr/share/nginx/html
+EXPOSE 80
+CMD ["nginx", "-g", "daemon off;"]
